# xmorph-20240707

./: AUTHORS  ChangeLog  HISTORY  Makefile.am  Makefile.conf  Makefile.in  NEWS  README.INSTALL  README.html  README.old  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  gimp-README  gtkmorph1.glade  gtkmorph2.glade  gtkmorph2.gladep
debian/: README.Debian  changelog  control  copyright  docs  gtkmorph-example.dirs  gtkmorph-example.files  gtkmorph.dirs  gtkmorph.files  gtkmorph.menu  libmorph-dev.files  libmorph.files  rules  xmorph.files  xmorph.info  xmorph.menu
doc/: Makefile.am  Makefile.in  gtkmorph.1  xmorph.1  xmorph.info  xmorph.texinfo
example/AA/: README  circuit.dest.mesh  circuit.jpg.mesh  circuit.pgm  circuit.ppm  circuit.ppm.mesh  circuit.session  grid.pgm  grid.ppm  grid.ppm.mesh  gtkmorph.session
example/AD/: README  image1.png.mesh  image2.png.mesh
example/AD2/: gtkmorph.session  image1.png.mesh  image2.png.mesh
example/AD_freeborder/: gtkmorph.session  image1.png.mesh  image1.png.meshtmp  image2.png.mesh  image2.png.meshtmp
glade1/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.h  main.c
glade2/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.h  main.c
gtkmorph/: Makefile.am  Makefile.in  README  affine.h  callbacks_edit.c  callbacks_fs.c  callbacks_fs.h  callbacks_fs_mesh.c  callbacks_help.c  callbacks_img.c  callbacks_main.c  callbacks_subimg.c  callbacks_subimg.h  callbacks_warped.c  colors.c  colors.h  dialogs.c  dialogs.h  feature.c  feature.h  fourier.cc  fourier.hh  gdk-pixbuf-extra.c  gdk-pixbuf-extra.h  gtk-meta.c  gtk-meta.h  gtk_subimagesel.c  gtk_subimagesel.h  gtksettings.c  gtksettings.h  gtktopdata.c  gtktopdata.h  guide.c  guide.h  guide_text.c  guide_text.h  loadsave.c  loadsave.h  loadsave_mesh.c  loadsave_mesh.h  (+26 more)
libmorph/: Makefile.am  Makefile.in  README.libmorph  RgbaImage.c  RgbaImage.h  braindead_msvc.h  mesh-getext.h  mesh-swig.h  mesh.c  mesh.h  mesh_t.h  my_malloc.c  my_malloc.h  relax.c  relax.c-unused  relax.h  resample.c  resample.h  resample_lvalero,oberger.c  resample_snippet.h  sinc_100.h  sinc_1024.h  sinc_256.h  spl-array.c  spl-array.h  spline.c  spline.h  tga.c  tga.h  warp-gtk.h  warp.c  warp.h  warp2.c  warp2.h
morph/: Makefile.am  Makefile.in  main.c
pixmaps/: eraser.xpm  example.xpm  hand01.xpm  howmany.xpm  pencil.xpm  pencil_y.xpm  transform.xpm
po/: ChangeLog  Makevars  POTFILES.in  de.po  fr.gmo  fr.po  gtkmorph.glade.c  gtkmorph.glade2.c  it.gmo  it.po  xmorph.pot
tkmorph/: Makefile.in
xmorph/: Makefile.am  Makefile.in  diw_map.c  diw_map.h  file_menu.c  file_menu.h  help_menu.c  help_menu.h  image_cb.c  image_cb.h  image_diw.c  image_diw.h  main.h  mesh_cb.c  mesh_cb.h  mesh_menu.c  mesh_menu.h  mjg_dialog.c  mjg_dialog.h  sequence.c  sequence.h  warp_menu.c  warp_menu.h  xmorph.c  xmorph.h
